# WaveBox

./: .gitignore  README.md  form_test.py  pyproject.toml  run.bat  server.py  state_test.py  test.py  test_routes.py  viewer.py
experiments/: Mesh3d_Elfda.py  carpet_test.py  power_absorbtion_v2.py  test.py  test_table.py
pages/: about.py  config.py  index.py  plot.py  power_absorbtion.py  power_absorbtion_v2.py  race.py  settings.py  ui_elements.py  viewer.py
