[project]
name = "wavebox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "config>=0.5.1",
    "f90nml>=1.5",
    "fastapi>=0.116.2",
    "marimo>=0.15.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "watchdog>=6.0.0",
]
